--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,10 @@ img {
     font-family: 'Open Sans';
 }
 
+#page-main-first-section-second-p>b {
+    font-family: 'Open Sans';
+}
+
 #main-square-first-picture {
     background-image: url(https://images.pexels.com/photos/2067396/pexels-photo-2067396.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
     background-position: center;
@@ -142,7 +146,12 @@ img {
 }
 
 #main-square-second-picture {
-    background-image: url(https://images.pexels.com/photos/949069/pexels-photo-949069.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+    /*other uestion
+    the font family looks different in my project
+
+    almost all
+    */ 
+    background-image: url(/img/brownie.jpg);
     background-position: center;
     background-size: cover;
     display: grid;
