--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Playfair Display', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Playfair Display', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', Verdana, sans-serif;
 }
 
 body {
@@ -225,4 +225,71 @@ img {
     padding: 10px 30px 10px;
     background-color: white;
     font-family: 'Playfair Display';
+}
+
+#main-section-img-background {
+    background-image: url(/img/bread.jpeg);
+    background-position: center;
+    background-size: cover;
+    color: whitesmoke;
+    height: 40vh;
+    display: grid;
+    text-align: center;
+    row-gap: 10px;
+    margin-bottom: 20px;
+}
+
+#main-section-img-background-first-p {
+    font-size: .9rem;
+    color: whitesmoke;
+    margin-top: 1vh;
+}
+
+#main-section-img-background-second-p {
+    text-align: center;
+    margin-left: 6vw;
+    margin-right: 6vw;
+    font-size: 1.5rem;
+    font-family: 'Open Sans';
+    text-shadow: 2px black;
+}
+
+#main-section-delicious-from-chef {
+    display: grid;
+    text-align: center;
+    row-gap: 8px;
+}
+
+#main-section-delicious-from-chef>p {
+    text-align: center;
+    font-size: .9rem;
+    color: rgb(126, 126, 126);
+}
+
+#main-section-delicious-from-chef>h1 {
+    font-family: 'Open Sans';
+    font-size: 2rem;
+    margin-bottom: 4vh;
+}
+
+#main-section-menu {
+    display: grid;
+    row-gap: 20px;
+   text-align: center;
+}
+
+.main-section-menu-div {
+    margin: 0px 10vw 0px;
+    display: grid;
+    row-gap: 3px;
+}
+
+.main-section-menu-div-plate-name {
+    text-align: center;
+    font-size: 1.1rem;
+    color: rgb(126, 126, 126);
+}
+
+.main-section-menu-div-plate-ingredients {
+    font-size: .8rem;
 }
