--- a/css/style.css
+++ b/css/style.css
@@ -496,12 +496,17 @@ background-image: url(/img/pizza.jpeg);
 
     #page-main-read-more-desktop-layout {
         display: grid;
-        grid-auto-flow: column;
+        grid-auto-flow: row;
     }
 
     .page-main-read-more-column {
         display: grid;
-        grid-auto-flow: row;
+        grid-template-columns: 1fr 1fr 1fr;
+        
+    }
+
+    .main-articles-p {
+        margin-bottom: 0;
     }
 
     #main-events {
